--- a/srcs/.env
+++ b/srcs/.env
@@ -1,1 +1,11 @@
-VAR=VAR
+MARIADB_USER=tdelar
+MARIADB_PASSWORD=inception
+MARIADB_DATABASE=tdelar_db
+
+WP_ADMIN_USER=basile
+WP_ADMIN_PWD=babaIsMe
+WP_ADMIN_MAIL=bvasseur@student.42angouleme.fr
+
+WP_USER=tolebozo
+WP_USER_PWD=iamthebozo
+WP_USER_MAIL=tde-la-r@student.42angouleme.fr
