--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,39 +1,54 @@
-version: '3'
 services:
     nginx:
-        build: requirement/nginx/
+        build: requirements/nginx/
+        container_name: nginx
+        depends_on:
+            - mariadb
         networks: 
             - inception
         env_file: .env
         ports:
             - "443:443"
+        restart: always
     mariadb:
-        build: requirement/mariadb/
+        build: requirements/mariadb/
+        container_name: mariadb
         networks:
             - inception
-        ports:
+        expose:
             - "3306"
         env_file: .env
         volumes:
-            - mariadb: /var/lib/mysql
+            - mariadb:/var/lib/mysql
+        restart: always
     wordpress:
-        build: requirement/wordpress/
+        build: requirements/wordpress/
+        container_name: wordpress
         depends_on:
-            mariadb
-                condition: service_healthy
+            - mariadb
         networks: 
             - inception
         ports:
-            - "9000"
+            - "9000:9000"
         env_file: .env
         volumes:
-            - wordpress: /var/www/wordpress
+            - wordpress:/var/www/html
+        restart: always
+
 volumes:
     mariadb:
         driver: local
+        driver_opts:
+            type: none
+            o: bind
+            device: /home/tde-la-r/data/mariadb
     wordpress:
         driver: local
-        device: /Users
+        driver_opts:
+            type: none
+            o: bind
+            device: /home/tde-la-r/data/wordpress
+
 networks:
     inception:
         driver: bridge
